# stock-agent

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
config/: strategy.yaml  universe.yaml
config/prompts/: fundamental.txt  macro.txt  portfolio_manager.txt  researcher.txt  risk_manager.txt  sentiment.txt  technical.txt
scripts/: daily_report.py  run_analysis.py  run_backtest.py  run_backtest_multi.py  run_comparison.py  run_daily.py  run_llm_backtest.py  run_paper.py  setup_dhan.py  telegram_bot.py
src/: config.py
src/agents/: base.py  fundamental.py  macro.py  portfolio_manager.py  researcher.py  risk_manager.py  sentiment.py  technical.py
src/backtest/: engine.py  metrics.py
src/data/: cache.py  news_fetcher.py  nse_fetcher.py
src/paper_trading/: broker.py
src/reporting/: dashboard.py  telegram_bot.py
