[project]
name = "stock-agent"
version = "0.1.0"
description = "Multi-agent LLM-powered stock analysis & paper trading for Indian markets (NSE)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Nilesh Kumar Pandey", email = "nileshkk9@gmail.com" }]

dependencies = [
    "yfinance>=0.2.40",
    "nsepython>=2.97",
    "kiteconnect>=5.0.0",
    "backtrader>=1.9.78",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "plotly>=5.20.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "ta-lib>=0.6.0",
    "scipy>=1.12.0",
    "aiohttp>=3.9.0",
    "python-telegram-bot>=21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "pre-commit>=3.7.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
